<resources>
    <string name="app_name">EasyTow-Officer</string>
    <string name="login_hint">Mobile Number</string>
    <string name="login">Login</string>
    <string name="otp">OTP Number</string>
    <string name="next">next</string>
    <string name="enter_otp">Enter otp</string>
    <string name="sign_out">Sign Out</string>
    <string name="resend">resend</string>
    <string name="welcome">Welcome Officer</string>
    <string name="source">SOURCE</string>
    <string name="destination">DESTINATION</string>
    <string name="submit">Submit</string>
    <string name="choose_option">Choose one option to enter vehicle number :</string>
    <string name="vehicle_details">Details</string>
    <string name="vehicle_detail">Vehicle number.</string>
    <string name="entry_via_camera">Scan a vehicle number with the help of camera</string>
    <string name="add_entry">Add Entry</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="email_message">Email address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password</string>
    <string name="vehicle_status">status</string>
    <string name="vehicle_owner_name">Owner Name :</string>
    <string name="fetch_info">fetch</string>
    <string name="owner_mobile_number">Mobile Number :</string>
    <string name="vehicle_type">Vehicle Type :</string>
    <string name="Fine">Fine :</string>
    <string name="to">TO</string>
    <string name="data_picker">Data Picker</string>
    <string name="note">Note</string>
    <string name="pending">pending</string>
    <string name="profile_name">OfficerName</string>
    <string name="mobile_number">OfficerInfomation</string>
    <string name="save">Save</string>
    <string name="norecordfound">EMPTY</string>
    <string name="movinglocation">Destination :</string>
    <string name="vehicle_number">Vehicle Number</string>

</resources>
