<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_option"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:paddingTop="30dp">


            <ImageButton
                android:id="@+id/camera_Button"
                style="@style/EntryButtonStyle"
                android:contentDescription="@string/entry_via_camera"
                android:src="@drawable/ic_camera_alt_black_24dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/text_Button"
                style="@style/EntryButtonStyle"
                android:src="@drawable/ic_title_black_24dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <ImageButton
                android:id="@+id/mic_button"
                style="@style/EntryButtonStyle"
                android:src="@drawable/ic_mic_black_24dp" />


        </LinearLayout>


        <TextView
            android:id="@+id/vehicle_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_details"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle" />


        <EditText
            android:id="@+id/vehicle_details_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>